--- a/index.html
+++ b/index.html
@@ -4,10 +4,45 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>COMPUGAMER</title>
+    <title>clase4Coder</title>
     <link rel="stylesheet" href="styles/index.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Dosis:wght@300;700&display=swap" rel="stylesheet">
 </head>
 <body>
+    <div class="banner">
+        <h1 class="tituloBanner">COMPUGAMER</h1>
+    </div>
+    <div class="cajaPresupuesto">
+        <h2 class="subtitulo">Arma tu PC Gamer!</h2>
+        <div class="formComponentes">
+            <form>
+                <h3 class="componente">PROCESADOR</h3>
+                <select class= "optionsDropMenu" name="cpu" id="cpu">
+                    <option value="RX-2600">Ryzen 5 2600 ($22.000)</option>
+                    <option value="RX-3600">Ryzen 5 3600 ($30.000)</option>
+                    <option value="RX-5600">Ryzen 5 5600 ($43.000)</option>
+                </select>
+                <h3 class="componente">PLACA DE VIDEO</h3>
+                <select class= "optionsDropMenu" name="gpu" id="gpu">
+                    <option value="RX580">RX 580 8GB ($100.000)</option>
+                    <option value="RX6700XT">RX 6700 XT ($250.000)</option>
+                    <option value="RX6800XT">RX 6800 XT ($400.000)</option>
+                </select>
+                <h3 class="componente">MEMORIA RAM</h3>
+                <select class= "optionsDropMenu" name="ram" id="ram">
+                    <option value="Corsair16">Corsair 16GB 3000MHZ ($10.500)</option>
+                    <option value="HyperX16">HyperX 16GB 3200MHZ ($14.500)</option>
+                    <option value="Trident16">Trident 16GB 3600MHZ ($20.000) </option>
+                </select>
+                <input class="enviar" type="submit" value="Calcular presupuesto">
+            </form>
+        </div>
+        <div class="total">
+            <h3 class="totalPresupuesto">Su total es de AR$ <span id="presupuestoCalculado"></span></h3>
+        </div>
+    </div>
     <script src="js/script.js"></script>
 </body>
-</html>
+</html> 
