--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     </div>
     <div class="cajaPresupuesto">
 
-        <h2 class="subtitulo rainbow_text_animated">Arma tu PC Gamer!</h2>
+        <h2 class="subtitulo rainbow_text_animated">Arma tu PC GAMER!</h2>
         
         <section id="cpus" class="card_productos">
             <h2 class="subtitulo_section">Procesadores</h2>
@@ -31,16 +31,16 @@
             <h2 class="subtitulo_section">Memorias RAM</h2>
         </section>
 
-        <section class="section-carrito">
-            <div class="card-carrito_productos">
-                <h3 class="titulo-carrito-productos">Carrito: </h3>
-                <p class="lista-productos-carrito"></p>   
+        <section class="section_carrito">
+            <div class="card_carrito_productos">
+                <h3 class="titulo_carrito_productos">Carrito: </h3>
+                <p class="lista_productos_carrito"></p>   
             </div>
             <div class="card_carrito">
-                <h3 class="titulo-carrito-total">Total: </h3>
-                <p class="total-carrito"></p> 
+                <h3 class="titulo_carrito_productos">Total: </h3>
+                <p class="total_carrito"></p> 
             </div>  
-            <img onclick="vaciarCarrito()" class= "tacho" src="assets/tacho.png" alt="">
+            <img onclick="vaciarCarrito()" class= "tacho" src="assets/tacho.png" alt="tachito">
         </section>
 
     </div>
