--- a/index.html
+++ b/index.html
@@ -32,13 +32,13 @@
             <h2 class="subtitulo_section">Memorias RAM</h2>
         </section>
 
-        <section class="section_carrito">
+        <section class="nav_bar_carrito">
             <div class="card_carrito_productos">
                 <h3 class="titulo_carrito_productos">Carrito: </h3>
                 <p class="lista_productos_carrito"></p>   
             </div>
-            <div class="card_carrito">
-                <h3 class="titulo_carrito_productos">Total: </h3>
+            <div class="card_carrito_total">
+                <h3 class="titulo_carrito_total">Total: </h3>
                 <p class="total_carrito"></p> 
             </div>  
             <img onclick="vaciarCarrito()" class= "tacho" src="assets/tacho.png" alt="tachito">
