--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <script src="js/productos.js"></script>
 </head>
 <body>
-    <div class="banner">
+    <div id="banner" class="banner">
         <h1 class="tituloBanner">COMPUGAMER</h1>
     </div>
     <div class="cajaPresupuesto">
@@ -40,6 +40,11 @@
                 <p class="total_carrito"></p> 
             </div>  
             <img onclick="vaciarCarrito()" class= "tacho" src="assets/tacho.png" alt="tachito">
+        </section>
+        <section class="creador">
+            <div id="creador"></div>
+            Nombre del creador: 
+            <div id="datos"></div>
         </section>
     </div>
     <script src="https://code.jquery.com/jquery-3.6.0.js" integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk=" crossorigin="anonymous"></script>
