--- a/carrito.html
+++ b/carrito.html
@@ -14,7 +14,7 @@
     <div id="banner" class="banner">
         <h1 class="tituloBanner">COMPUGAMER</h1>
         <a class="tienda_link" href="index.html">
-            <h3 class="nav_texto_link">Tienda</h3>
+            <h3 class="nav_texto_link">Volver a la tienda</h3>
         </a>
         <a class="carrito_link" href="carrito.html">
             <h3 class="nav_texto_link">Carrito</h3>
@@ -25,13 +25,13 @@
         <div id="cajaCarrito" class="cajaCarrito">
             <h1 class="tituloCarrito">Carrito de compras</h1>
         </div>
-            <section class="nav_bar_carrito">
-                <div class="card_carrito_total">
-                    <h3 class="titulo_carrito_total">Total: </h3>
-                    <p class="total_carrito"></p> 
-                </div>  
-                <img onclick="vaciarCarrito()" class= "tacho" src="assets/tacho.png" alt="tachito">
-            </section>
+        <section class="nav_bar_carrito">
+            <div class="card_carrito_total">
+                <p class="titulo_carrito_total">Total:</p>
+                <p class="total_carrito"></p> 
+            </div>  
+            <img onclick="vaciarCarrito()" class= "tacho" src="assets/tacho.png" alt="tachito">
+        </section>
     </div>
     <script src="https://code.jquery.com/jquery-3.6.0.js" integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk=" crossorigin="anonymous"></script>
     <script src="js/carrito.js"></script>
