--- a/carrito.html
+++ b/carrito.html
@@ -32,6 +32,9 @@
             </div>  
             <img onclick="vaciarCarrito()" class= "tacho" src="assets/tacho.png" alt="tachito">
         </section>
+        <div class="seccionConfirmar">
+            <button onclick="confirmarCompra()" class= "finalizarCompra">Finalizar Compra</button>
+        </div>
     </div>
     <script src="https://code.jquery.com/jquery-3.6.0.js" integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk=" crossorigin="anonymous"></script>
     <script src="js/carrito.js"></script>
