--- a/carrito.html
+++ b/carrito.html
@@ -12,7 +12,7 @@
 </head>
 <body>
     <div id="banner" class="banner">
-        <h1 class="tituloBanner">COMPUGAMER</h1>
+        <a href="index.html"><h1 class="tituloBanner">COMPUGAMER</h1></a>
         <a class="tienda_link" href="index.html">
             <h3 class="nav_texto_link">Volver a la tienda</h3>
         </a>
